--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,28 +1,23 @@
-/* .App {
-  text-align: center;
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; 
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; 
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+body {
+  /* font-family: "Nunito", sans-serif; */
+  /* color: #6D5D4B; */
+  font-weight: 300;
+  line-height: 1.6; 
 }
 
-.App-title {
-  font-size: 1.5em;
+.app {
+  height: 100vh;
 }
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-} */
